@@ -5,29 +5,49 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class Settings {
-    private static final String API_DISK_HOST = "cloud-api.yandex.net";
     private static final String API_OAUTH_HOST = "oauth.yandex.ru";
-    private static final String API_VERSION = "/v1";
-    private static final String API_PATH = "resources/";
-    private static final String API_TYPE = "/disk/";
-    private static final String API_UPLOAD = "/upload?path=%s&overwrite=%s"; //true?false
     private static final String API_SCHEME = "https://";
-    private static final String API_MIME_TYPE = "application/json";
     private static final String APP_ID = "692e18fbb968491fa3ae19e091ce5840";
     private static final String APP_OAUTH_URL_QUERY = "/authorize?response_type=token&client_id=";
     private static final String CONFIG_FILENAME = "config.xml";
     private static final String DATA_FOLDER_NAME = "data";
-
-    private String apiUploadFile = API_SCHEME + API_DISK_HOST + API_VERSION + API_TYPE + API_PATH + API_UPLOAD;
-    private String apiFullPath = API_SCHEME + API_DISK_HOST + API_VERSION + API_TYPE;
-    private String appOauthFullPath = API_SCHEME + API_OAUTH_HOST + APP_OAUTH_URL_QUERY + APP_ID;
+    private static final String CONFIG_FOLDER_NAME = "conf";
+    private static final String APP_OAUTH_FULL_PATH = API_SCHEME + API_OAUTH_HOST + APP_OAUTH_URL_QUERY + APP_ID;
     private String APP_TOKEN = "";
+    private String APP_LOGIN = "";
 
     private boolean isSplashScreenNeeded = false;
 
-    Path currentFolder = Paths.get("").toAbsolutePath();
-    Path configFile = Path.of(currentFolder + File.separator + CONFIG_FILENAME);
-    Path dataFolder = Path.of(currentFolder + File.separator + DATA_FOLDER_NAME);
+    static Path currentFolder = Paths.get("").toAbsolutePath();
+    static Path configFile = Path.of(currentFolder + File.separator + CONFIG_FILENAME);
+    static Path localDataFolder = Path.of(currentFolder + File.separator + DATA_FOLDER_NAME);
+    static Path remoteDataFolder = Path.of(File.separator + DATA_FOLDER_NAME);
+    static Path localConfigFolder = Path.of(currentFolder + File.separator + CONFIG_FOLDER_NAME);
+    static Path remoteConfigFolder = Path.of(File.separator + CONFIG_FOLDER_NAME);
+    static String dataFolderName = DATA_FOLDER_NAME;
+    static String configFolderName = CONFIG_FOLDER_NAME;
+
+
+    public enum DownloadDataType {
+        NOTEBOOK(localDataFolder.toString(), remoteDataFolder.toString()),
+        SETTINGS(localConfigFolder.toString(), remoteConfigFolder.toString());
+
+        private final String localFolder;
+        private final String remoteFolder;
+
+        DownloadDataType(String localFolder, String remoteFolder) {
+            this.localFolder = localFolder;
+            this.remoteFolder = remoteFolder;
+        }
+
+        public String getLocalFolder(){
+            return localFolder;
+        }
+
+        public String getRemoteFolder(){
+            return remoteFolder;
+        }
+    }
 
     public String getappToken() {
         return APP_TOKEN;
@@ -35,6 +55,14 @@ public class Settings {
 
     public void setappToken(String appToken) {
         this.APP_TOKEN = appToken;
+    }
+
+    public String getAPP_LOGIN() {
+        return APP_LOGIN;
+    }
+
+    public void setAPP_LOGIN(String APP_LOGIN) {
+        this.APP_LOGIN = APP_LOGIN;
     }
 
     public boolean isSplashScreenNeeded() {
@@ -45,12 +73,8 @@ public class Settings {
         isSplashScreenNeeded = splashScreenNeeded;
     }
 
-    public String getApiFullPath() {
-        return apiFullPath;
-    }
-
     public String getAppOauthFullPath() {
-        return appOauthFullPath;
+        return APP_OAUTH_FULL_PATH;
     }
 
     public Path getCurrentFolder() {
@@ -61,7 +85,7 @@ public class Settings {
         return configFile;
     }
 
-    public Path getDataFolder() {
-        return dataFolder;
+    public String getDataFolderName() {
+        return dataFolderName;
     }
 }
